src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Lead record.</description>
        <inlineHelpText>ZoomInfo Phone for the Lead record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</description>
        <inlineHelpText>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</inlineHelpText>
        <label>ZoomInfo Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Inbound_Outbound__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Sales Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Archive_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Archive</label>
        <queue>Archive</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IST_Inbound_Not_contacted</fullName>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>arand,cmart. mtrap,jcata. mhurl</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Sales Ready - Not in Sequence</value>
        </filters>
        <label>IST - Inbound Unconverted</label>
    </listViews>
    <listViews>
        <fullName>Imported_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>Imported Leads</label>
    </listViews>
    <listViews>
        <fullName>Inquiries_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Inquiries</label>
        <queue>Inquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LastWeeksLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>APP</value>
        </filters>
        <label>Last Week&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>No_Response_Lead_Blast</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Inbound_Outbound__c</field>
            <operation>equals</operation>
            <value>Inbound</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>No Response</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Rep Generated</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>7/10/2018</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>gmail,aol,outlook,hotmail,icloud,yandex,yahoo,msn,ymail</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notEqual</operation>
            <value>[not provided]</value>
        </filters>
        <filters>
            <field>Disqualified_Reason__c</field>
            <operation>notEqual</operation>
            <value>Do Not Contact - Unsubscribed</value>
        </filters>
        <label>No Response Lead Blast</label>
    </listViews>
    <listViews>
        <fullName>Node_Enhanced</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Unqualified_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>Node Enhanced</label>
    </listViews>
    <listViews>
        <fullName>Non_SFDC_User_Engagement_Campaign</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>Actively_Being_Sequenced__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Salesforce_User__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>gmail,aol,outlook,hotmail,icloud,yandex,yahoo,msn,ymail</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Pre-MQL</value>
        </filters>
        <label>Non-SFDC User Engagement Campaign</label>
    </listViews>
    <listViews>
        <fullName>Pre_Approached_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Pre-Approached</value>
        </filters>
        <label>Pre-Approached Leads</label>
    </listViews>
    <listViews>
        <fullName>Subscribe_To_The_Node_Blog</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>MailChimp</value>
        </filters>
        <label>Subscribe To The Node Blog</label>
    </listViews>
    <listViews>
        <fullName>Suspects_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Suspects</label>
        <queue>Suspects</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>APP</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>nde__NodeGeneratedLeadsView</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>nde__Company_Domain__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>nde__Node_Generated_Lead_Formula__c</columns>
        <columns>nde__Node_Priority_Formula__c</columns>
        <columns>nde__Node_Context__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <filters>
            <field>nde__Node_Generated_Checkbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Node Leads View</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Disqualified_Reason_for_Lead_Status</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISPICKVAL(Status,&apos;Disqualified&apos;)&amp;&amp; ISPICKVAL(Disqualified_Reason__c, &apos;&apos;),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
        <errorMessage>Disqualified Reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_for_Disqualified_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISPICKVAL( Status ,&apos;Timing - Future Opportunity&apos;)
&amp;&amp;ISBLANK(Follow_Up_Date__c),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_for_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISPICKVAL(Status,&apos;Timing - Future Opportunity&apos;)&amp;&amp; Follow_Up_Date__c &lt; TODAY()+1,TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date should be Future Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preventing_Lead_to_be_Owned_by_LMA</fullName>
        <active>false</active>
        <errorConditionFormula>CreatedById   &lt;&gt; &apos;005370000011vYz&apos;</errorConditionFormula>
        <errorMessage>Leads are not allowed to be Created by this User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Secondary_Lead_Source</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status,&quot;Sales Qualified&quot;) &amp;&amp;  ISPICKVAL( Secondary_Lead_Source__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>Must include additional clarification for lead source. If from website, how did lead first hear about Node? If no secondary source, list &quot;None&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Qualified_Status_is_Converted</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status,&quot;Contacted and Sales Qualified - New Opportunity&quot;) &amp;&amp; IsConverted = False</errorConditionFormula>
        <errorMessage>Need to update Lead Status. &apos;Qualified&apos; status is only available when converting a lead.</errorMessage>
    </validationRules>
</CustomObject>